<resources>
    <string name="app_name">Oui</string>
    <string name="app_desc">welcome</string>
    <string name="language">Change Language</string>

    <string name="search">Search</string>
    <string name="btn_logout">Logout</string>

    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan QR</string>

    <!--LOGIN/SIGNUP ACTIVITY STRINGS-->
    <string name="btnLogin">Login</string>
    <string name="login">Already have an account? Login</string>
    <string name="email"> Enter Email </string>
    <string name="password">Enter Password</string>
    <string name="phone">Enter Phone Number</string>
    <string name="btnSignup">Sign up</string>
    <string name="signup">Dont have an account? sign up</string>
    <string name="fname_input">Enter First Name </string>
    <string name="username">Enter a username</string>
    <string name="sname_input">Surname</string>

    <!--MENU DETAIL ACTIVITY STRINGS -->
    <string name="dishName" translatable="false">dishname</string>
    <string name="dishDesc" translatable="false">dish description</string>
    <string name="addBTN">ADD</string>
    <string name="reviewBTN">See Reviews</string>

    <!--SCAN ACTIVITY STRINGS -->
    <string name="scanbtn">Press to scan</string>
    <string name="scanDesc">Scan the QR code to see restaurant menu</string>
    <string name="menu">Menu</string>

    <!--HOME ACTIVITY STRING -->
    <string name="showNot">Nothing to show, please scan again or contact restaurant manager</string>
    <string name="title_activity_home" translatable="false">Oui</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!--ORDER HISTORY ACTIVITY STRINGS -->
    <string name="Status">Status : </string>
    <string name="state" translatable="false">status</string>
    <string name="TableNo">Table No : </string>
    <string name="tablenum" translatable="false">tablenum </string>

    <!--REVIEW ACTIVITY STRINGS -->
    <string name="user" translatable="false">USER</string>

    <!--ABOUT ACTIVITY STRINGS-->
    <string name="aboutName">Oui Restaurant is here to assist your every needs. \nWith this app you can make your order fast and efficient! \n\n\n</string>
    <string name="aboutDesc"> Scan QR code to see more about us: \n</string>

    <!--BASKET ACTIVITY STRINGS -->
    <string name="total">TOTAL: </string>
    <string name="placeOrder">Place Order</string>

    <!--ORDERS ACTIVITY TABLE COMMENT LAYOUT STRINGS -->
    <string name="enterTable">Enter table number</string>
    <string name="comments">Comments</string>
    <string name="payments">Payment methods: </string>
    <string name="paypal" translatable="false">Paypal</string>
    <string name="cash">Call waiter for cash payments</string>
    <string name="emptyBasket">Basket is empty, add products!</string>
    <string name="PaymentMeth">Please select a payment method!</string>
    <string name="orderKit">Order sent to kitchen</string>
    <string name="cancel">Cancel</string>
    <string name="payCan">Payment cancelled</string>
    <string name="payInval">Payment invalid</string>

</resources>
