<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/edtTable"
              android:hint="@string/enterTable"
              android:inputType="number"
              android:textSize="25sp"
              android:textColorHint="@color/grey"
              android:textColor="@color/black"/>


          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/editComment"
              android:hint="@string/comments"
              android:textSize="20sp"
              android:inputType="textMultiLine"
              android:textColorHint="@color/grey"
              android:textColor="@color/black"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:textSize="15sp"
              android:id="@+id/payment"
              android:text="@string/payments"/>
          <RadioGroup
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
              <RadioButton
                  android:id="@+id/Paypal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/paypal"/>
              <RadioButton
                  android:id="@+id/CallCash"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/cash"/>
          </RadioGroup>

    </LinearLayout>



</androidx.cardview.widget.CardView>